--- a/React-Templates/with-redux-fetch/template/client/public/index.html
+++ b/React-Templates/with-redux-fetch/template/client/public/index.html
@@ -19,8 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Handlee|Karla|Jura|Monda|Oswald:100,200,300,500,700|Roboto|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Handlee|Karla|Jura|Monda|Oswald:100,200,300,500,700|Roboto|Roboto+Condensed:400,400i,700,700i|Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-87DrmpqHRiY8hPLIr7ByqhPIywuSsjuQAfMXAE0sMUpY3BM7nXjf+mLIUSvhDArs" crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
