updated some details

--- a/React-Templates/with-redux-fetch/template/client/src/css/App.css
+++ b/React-Templates/with-redux-fetch/template/client/src/css/App.css
@@ -1,35 +1,25 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
+  font-family: "Oswald", sans-serif;
+  width: 100vw;
+  font-weight: 300;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+:root {
+  --green-color: #BFBA3D;
+  --header-color: #e8e6de;
+  --headeropacity-color: #e8e6decc;
+  --blue-color: #8AB2C2;
+  --headertext-color: black;
+  --orange-color: #DC5620;
+  --teal-color: #20c0dc;
+  --react-color: #00d8ff;
+  --butter-color: #ffc825;
+  --calcHeight-meas: calc(100vh - 141px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 /************** media queries **************/
