--- a/React-Templates/with-redux-fetch-auth/template/client/public/index.html
+++ b/React-Templates/with-redux-fetch-auth/template/client/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Handlee|Karla|Jura|Monda|Oswald:100,200,300,500,700|Roboto|Roboto+Condensed:400,400i,700,700i|Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
